objects/AcctSeed__Financial_Cube_Transaction__c/fields/AcctSeed__Financial_Cube__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Financial_Cube__c</fullName>
    <label>Financial Cube</label>
    <referenceTo>AcctSeed__Financial_Cube__c</referenceTo>
    <relationshipName>Financial_Cube_Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>