objects/AcctSeed__Financial_Cube_Transaction__c/fields/AcctSeed__Transaction__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Transaction__c</fullName>
    <label>Transaction</label>
    <referenceTo>AcctSeed__Transaction__c</referenceTo>
    <relationshipName>Financial_Cube_Transactions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>